--- a/atlas.com/cts/config.yaml
+++ b/atlas.com/cts/config.yaml
@@ -3,7 +3,7 @@ transports:
   - enabled:               true
     source:                103000000
     departure:             540010100
-    transport:             540010101
+    transport:             [540010101]
     arrival:               540010000
     destination:           540000000
     open_gate_duration:    240000
@@ -13,9 +13,50 @@ transports:
   - enabled:               true
     source:                540000000
     departure:             540010001
-    transport:             540010002
+    transport:             [540010002]
     arrival:               103000000
     destination:           103000000
     open_gate_duration:    240000
     closed_gate_duration:  60000
     ride_duration:         60000
+  #Ellinia to Orbis
+  - enabled:               true
+    source:                101000000
+    departure:             101000301
+    transport:             [200090010, 200090011]
+    arrival:               200000100
+    destination:           200000000
+    open_gate_duration:    240000
+    closed_gate_duration:  60000
+    ride_duration:         600000
+  #Orbis to Ellinia
+  - enabled:               true
+    source:                200000000
+    departure:             200000112
+    transport:             [200090000, 200090001]
+    arrival:               101000300
+    destination:           101000000
+    open_gate_duration:    240000
+    closed_gate_duration:  60000
+  #Orbis to Leafre
+  - enabled:               true
+    source:                200000000
+    departure:             200000132
+    transport:             [200090200]
+    arrival:               240000110
+    destination:           240000000
+    open_gate_duration:    240000
+    closed_gate_duration:  60000
+    ride_duration:         600000
+    ride_duration:         300000
+  #Leafre to Orbis
+  - enabled:               true
+    source:                240000000
+    departure:             240000111
+    transport:             [200090210]
+    arrival:               200000100
+    destination:           200000000
+    open_gate_duration:    240000
+    closed_gate_duration:  60000
+    ride_duration:         600000
+    ride_duration:         300000
